--- a/public/styles.css
+++ b/public/styles.css
@@ -31,9 +31,14 @@
 }
 
 .btn-blueviolet {
-    background-color: blueviolet;
+    background-color: blueviolet !important;
     color: white;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
+}
+
+#error-message {
+    text-align: center; 
+    color: red; 
 }
