--- a/public/styles.css
+++ b/public/styles.css
@@ -31,7 +31,7 @@
 }
 
 .btn-blueviolet {
-    background-color: blueviolet !important;
+    background-color: blueviolet ;
     color: white;
     padding: 10px 20px;
     border: none;
