--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,7 @@
 
 .navbar-custom {
     background-color: indigo;
+    display: flex;
 }
 .nav-link.active {
     background-color: indigo;
@@ -20,14 +21,18 @@
         color: plum;
     }
 }
-.navbar-brand {
+
+.navbar h4 {
+    margin-right: -50px;
     color: white;
-}
-.navbar-custom h4 {
-    margin: 0;
-    color: white;
-    text-align: center;
-    width: 100%;
+    font-size: 1.5rem;
+  }
+
+.navbar-nav {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .btn-blueviolet {
@@ -42,3 +47,31 @@
     text-align: center; 
     color: red; 
 }
+
+@media (max-width: 768px) {
+  
+    .navbar-custom .navbar-nav {
+      flex-direction: row; /* Keep nav items in a row */
+    }
+  
+    .navbar-custom .nav-link {
+      margin: 0 5px; /* Adjust spacing between links */
+    }
+
+    .navbar h4 {
+        margin-right: -50px;
+        color: white;
+        font-size: 1.35rem;
+      }
+  }
+
+  @media (max-width: 992px) {
+  
+    .navbar-custom .navbar-nav {
+      flex-direction: row; /* Keep nav items in a row */
+    }
+  
+    .navbar-custom .nav-link {
+      margin: 0 5px; /* Adjust spacing between links */
+    }
+  }
