Optimised fetch api by storing messages in local storage

--- a/public/styles.css
+++ b/public/styles.css
@@ -41,6 +41,10 @@
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
+    &:hover {
+        background-color: indigo;
+        color: white;
+    }
 }
 
 #error-message {
