--- a/public/chat/styles.css
+++ b/public/chat/styles.css
@@ -26,6 +26,11 @@ body {
     border-radius: 4px;
 }
 
+.join-message {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
 .navbar-custom {
     background-color: indigo;
 }
