--- a/public/chat/styles.css
+++ b/public/chat/styles.css
@@ -69,7 +69,69 @@ body {
   }
 
 /* @media (max-width: 768px) {
-    .navbar-custom h4 {
-        font-size: 1.2rem;
+    #create-group-button {
+        padding: 6px 12px;
+        font-size: 0.8rem;
+
     }
 } */
+
+.user-list {
+    height: 700px;
+    overflow-y: auto;
+}
+
+
+
+#group-list {
+    overflow-y: auto;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border-top: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+}
+
+/* Individual group item */
+.group-item {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    margin: 5px 0;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    margin-bottom: 20px;
+    font-size: 1.1rem;
+}
+
+/* Hover effect for group item */
+.group-item:hover {
+    background-color: #d0ced1;
+}
+
+/* Active group item */
+.group-item.active {
+    background-color: #e0beee;
+    border-color: #9d30c9;
+    color: #9d30c9;
+}
+
+
+/* .modal-header {
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+  
+  .modal-title {
+    flex: 1;
+    text-align: center;
+  }
+  
+  .modal-header .btn-close {
+    position: absolute;
+    right: 10px;
+  } */
