--- a/public/chat/styles.css
+++ b/public/chat/styles.css
@@ -135,3 +135,17 @@ body {
     position: absolute;
     right: 10px;
   } */
+
+  .custom-button1 {
+    background-color: #e0beee;
+    border-color: #e0beee;
+    &:hover {
+        background-color: rgb(97, 77, 107) 
+    }
+    cursor: pointer;
+}
+
+.dropdown-item:hover {
+    background-color: #d1c0d3; /* Change this color to your desired hover color */
+    cursor: pointer;
+}
